<resources>
    <!-- Actions -->
    <string name="action_logout">Logout</string>
    <!-- General -->
    <string name="eusm_app_name" translatable="false">eusm</string>
    <string name="app_name" translatable="false">@string/eusm_app_name</string>
    <string name="app_version">App version: %1$s (built on %2$s)</string>
    <string name="app_version_without_build_number">Version %1$s</string>

    <!--Temp -->
    <string name="unauthorized">Please check the credentials</string>
    <string name="unauthorized_group">Your user group is not allowed to access this device</string>
    <string name="unknown_response">Incorrect username or password. Please try again</string>
    <string name="no_internet_connectivity">No internet connection. Please ensure data connectivity</string>
    <string name="login_text">Log In</string>
    <string name="show_password_text">Show password</string>

    <string name="device_timezone_changed">"The device's timezone changed. Please login again."</string>
    <string name="device_time_changed">"The device's time has changed. Please login again."</string>

    <string name="prompt_password">Enter Password </string>
    <string name="prompt_username">Enter Username</string>
    <string name="sync">Sync</string>
    <string name="campaign">Mission</string>
    <string name="operational_area">District</string>
    <string name="plan">Mission</string>


    <string name="offline_maps">Offline maps</string>
    <string name="app_updated">Updated %1$s</string>
    <string name="district">District:</string>
    <string name="facility">Location:</string>
    <string name="operator">User:</string>
    <string name="operator_with_middle_dot">User : %s &#183;</string>


    <string name="no_matching_record_found_on_this_device">no matching record found</string>
    <string name="powered_by">Powered by</string>
    <string name="download">Download</string>
    <string name="hamburger_menu">menu</string>
    <string name="menu">menu</string>
    <string name="map">map</string>
    <string name="downloading">Downloading</string>
    <string name="list">List</string>
    <string name="download_finished_successfuly">Download finished successfully</string>
    <string name="select_offline_map_to_delete">Select Offline map to delete</string>
    <string name="delete">delete</string>
    <string name="select_offline_map_to_download">Select Offline map to download</string>

    <string name="operational_area_not_selected">Region not selected</string>
    <string name="plan_not_selected">Mission not selected</string>


    <string name="device_data_synced">Device data synced</string>
    <string name="device_data_not_synced">Device data not synced</string>

    <string name="progressBarLabel">Syncing %s : %d%%</string>
    <string name="search_hint">Search</string>

    <string name="events">Events</string>
    <string name="locations">Locations</string>
    <string name="plans">Missions</string>
    <string name="structures">Service Points</string>
    <string name="tasks_text">Tasks</string>
    <string name="fetching_structures_title">Fetching Service Points</string>
    <string name="fetching_structures_message">Fetching Service Points for Selected Region and Mission</string>

    <string name="plans_download_on_progress_title">Download in Progress</string>
    <string name="plans_download_on_progress">Downloading of Missions In Progress. Please wait</string>

    <string name="error_fetching_location_hierarchy_title">Error Processing Locations Hierarchy</string>
    <string name="error_fetching_location_hierarchy">Error Processing Location Hierarchy. Log off to download location hierarchy again</string>

    <string name="eusm_offline_map_download_style" translatable="false">map-download-style.json</string>

    <string name="available">available</string>
    <string name="downloaded">Downloaded</string>

    <string name="reveal_satellite_style" translatable="false">asset://reveal-streets-satellite.json</string>
    <string name="reveal_offline_map_download_style" translatable="false">map-download-style.json</string>
    <string name="reveal_datasource_name" translatable="false">reveal-data-set</string>
    <string name="reveal_layer_polygons" translatable="false">reveal-data-polygons</string>
    <string name="reveal_layer_points" translatable="false">reveal-data-points</string>
    <string name="base_map_feature_json" translatable="false">base_map_feature.json</string>
    <string name="nearby_within_n_m">NEARBY (WITHIN %s M)</string>
    <string name="other_service_points_a_to_z">OTHER SERVICE POINTS (A TO Z)</string>
    <string name="language_s">Language: %s</string>
    <string name="english_lang">English</string>
    <string name="french_lang">French</string>

    <string name="saving_title">Saving</string>
    <string name="saving_message">Saving form in Progress. Please wait</string>

    <string name="str_page_info">Page {0} of {1}</string>
    <string name="distance_from_structure">%s &#183; %s away</string>
    <string name="unlisted_distance_from_structure">%s &#183; </string>

    <string name="next_page"><![CDATA[NEXT >>]]></string>
    <string name="previous_page"><![CDATA[<< Previous]]></string>
    <string name="product_serial_n_quantity" translatable="false">%s  &#183; %s %s</string>
    <string name="product_serial_text">Serial # </string>
    <string name="product_quantity_text">Qty: </string>
    <string name="product_serial">Serial # %s</string>
    <string name="product_serial_n_date_checked">Serial # %s</string>
    <string name="task_item_text">ITEMS</string>
    <string name="task_checked_text">CHECKED</string>
    <string name="no_items_to_check">No items to check</string>
    <string name="no_items_checked_yet">No items checked yet</string>
    <string name="back">Back</string>
    <string name="mark_as_looks_good_title">Mark as \"looks good\"?</string>
    <string name="looks_good_dialog_message">The item is there, it\'s in good condition, and it\'s being used appropriately.</string>
    <string name="undo_task_title">Undo assessment on %s</string>
    <string name="undo_looks_good_title">Undo \"looks good\" on %s</string>
    <string name="undo_flag_problem_title">Undo \"flag problem\" on %s</string>

    <string name="undo_dialog_message">This will undo your assessment on this item.</string>
    <string name="undo">Undo</string>
    <string name="cancel">Cancel</string>
    <string name="no_of_items">%s items</string>
    <string name="is_it_there">Is it there?</string>
    <string name="is_it_good_condition">Is it in good condition?</string>
    <string name="is_it_being_used_appropriately">Is it being used appropriately?</string>
    <string name="looks_good_save_dialog">Saving</string>
    <string name="fix_problem_prefix">Fix Problem: %s</string>
    <string name="view_inventory">View inventory</string>
    <string name="tasks_in_progress">In Progress</string>
    <string name="tasks_completed">Completed</string>
    <string name="flag_problem_button_text">Flag problem</string>
    <string name="looks_good_button_text">Looks good!</string>
    <string name="download_starting">Download starting</string>
    <string name="user_location_not_received">User location has not been received</string>
    <string name="flag_problem_form_name">Flag Problem</string>
    <string name="gps_unknown">GPS unknown</string>

    <string name="select_campaign_operational_area_title">Mission and Region not set</string>
    <string name="select_campaign_operational_area">Mission and Region not set. Select from the hamburger menu</string>
    <string name="revoked_plan_operational_area">Previously selected Mission and/or Region revoked. Select from the hamburger menu</string>
    <string name="read_and_write_permission_not_granted">Read And Write Storage Permission Not Granted</string>

    <string name="service_point_check_task_title">Service Point Check</string>
    <string name="record_gps_task_title">Record GPS</string>
    <string name="location_has_no_structures">Error: Location has no service points!!</string>
    <string name="date_checked">date checked</string>
    <string name="text_selected_a_cluster_point">You\'ve selected a cluster point!</string>

    <string name="stock_type_id_key" translatable="false">identifier</string>
    <string name="ok_text">OK</string>
    <string name="new_assignment_dialog_title">New Mission Assigned</string>
    <string name="no_structures_found">There are no active service points in this region.</string>
    <string name="fetch_location_and_structures_failed">There are no active service points in this region.</string>
    <string name="account_disabled">Account Disabled</string>
    <string name="fetching_structure_title">Fetching Structure Details</string>
    <string name="fetching_structure_message">Fetching Structure Details. Please wait</string>
    <string name="map_download_progress">Downloading: %,.2f %%</string>
    <string name="regions">Regions</string>

    <string name="consult_beneficiaries_task_title">Consult Beneficiaries</string>
    <string name="warehouse_check_task_title">Warehouse Check</string>
    <string name="map_deleted">Map Deleted:  %1s</string>
    <string name="another_map_in_download">Another map is currently being downloaded.</string>
    <string name="deleting_map">Deleting map</string>
    <string name="remote_login_generic_error">You are not currently assigned to a mission. Please ask the EUSM administrators</string>

</resources>
