<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    android:theme="@style/AppTheme.Nav.ThemeOverlay">

    <ImageView
        android:id="@+id/eusm_icon"
        android:layout_width="213dp"
        android:layout_height="77dp"
        android:layout_marginStart="@dimen/drawer_margin"
        android:layout_marginTop="@dimen/drawer_icon_margin"
        android:scaleType="fitStart"
        android:src="@drawable/eusm_logo_v1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/application_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/drawer_margin"
        android:layout_marginTop="10dp"
        android:textColor="@color/text_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/eusm_icon" />

    <TextView
        android:id="@+id/application_updated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/drawer_margin"
        android:textColor="@color/text_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/application_version" />

    <RelativeLayout
        android:id="@+id/progressbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/drawer_margin"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/application_updated">

        <com.google.android.flexbox.FlexboxLayout
            android:id="@+id/flex_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:alignContent="stretch"
            app:alignItems="stretch"
            app:flexWrap="wrap">

            <TextView
                android:id="@+id/sync_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sync"
                android:textColor="@color/button_blue"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/sync_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="3dp"
                android:paddingStart="15dp"
                android:paddingTop="5dp"
                android:paddingEnd="15dp"
                android:paddingBottom="5dp"
                android:textSize="16sp" />
        </com.google.android.flexbox.FlexboxLayout>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/sync_progress_bar_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:textColor="@color/text_gray"
                    android:textSize="12sp"
                    android:visibility="invisible" />

                <ProgressBar
                    android:id="@+id/sync_progress_bar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:indeterminate="false"
                    android:max="100"
                    android:visibility="invisible" />
            </LinearLayout>
        </FrameLayout>
    </RelativeLayout>

    <TextView
        android:id="@+id/btn_navMenu_offline_maps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/drawer_margin"
        android:layout_marginTop="5dp"
        android:text="@string/offline_maps"
        android:textColor="@color/button_blue"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/progressbar_layout" />

    <TextView
        android:id="@+id/btn_navMenu_language_chooser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/drawer_margin"
        android:layout_marginTop="10dp"
        android:text="@string/language_s"
        android:textColor="@color/button_blue"
        android:textSize="18sp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_navMenu_offline_maps" />

    <View
        android:id="@+id/header_separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/drawer_margin_vertical"
        android:layout_marginBottom="@dimen/drawer_separator_margin"
        android:background="#DEDEDE"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_navMenu_language_chooser" />

    <TextView
        android:id="@+id/plan_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/drawer_margin"
        android:layout_marginTop="@dimen/drawer_separator_margin"
        android:text="@string/campaign"
        android:textColor="@color/text_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_separator"

        />

    <TextView
        android:id="@+id/plan_selector"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/drawer_margin"
        android:layout_marginTop="@dimen/drawer_margin_vertical"
        android:layout_marginEnd="@dimen/drawer_margin"
        android:background="@drawable/nav_border_bg"
        android:drawableEnd="@drawable/ic_keyboard_arrow_down_small"
        android:drawablePadding="@dimen/drawer_drawable_padding"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:textColor="@color/text_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/plan_label" />

    <TextView
        android:id="@+id/operational_area_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/drawer_margin"
        android:layout_marginTop="@dimen/drawer_separator_margin"
        android:text="@string/operational_area"
        android:textColor="@color/text_black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/plan_selector" />


    <TextView
        android:id="@+id/operational_area_selector"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/drawer_margin"
        android:layout_marginTop="@dimen/drawer_margin_vertical"
        android:layout_marginEnd="@dimen/drawer_margin"
        android:background="@drawable/nav_border_bg"
        android:drawableEnd="@drawable/ic_keyboard_arrow_down_small"
        android:drawablePadding="@dimen/drawer_drawable_padding"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:textColor="@color/text_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/operational_area_label" />

    <TextView
        android:id="@+id/district_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/drawer_margin"
        android:layout_marginTop="@dimen/drawer_separator_margin"
        android:text="@string/district"
        android:textColor="@color/text_gray"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/plan_selector" />


    <TextView
        android:id="@+id/facility_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/drawer_margin"
        android:layout_marginTop="@dimen/drawer_margin_vertical"
        android:text="@string/facility"
        android:textColor="@color/text_gray"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/district_label" />

</androidx.constraintlayout.widget.ConstraintLayout>