<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/toolbar_home_map_view" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="45dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_gravity="bottom"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/previous_button"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:layout_alignParentStart="true"
                    android:visibility="invisible"
                    android:layout_gravity="bottom"
                    android:textSize="17sp"
                    android:text="@string/previous_page" />
                <TextView
                    android:id="@+id/page_info_textView"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:text="@string/str_page_info"
                    android:textSize="17sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <Button
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:id="@+id/next_button"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:visibility="invisible"
                    android:textSize="17sp"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="bottom|right"
                    android:text="@string/next_page" />
            </RelativeLayout>

            <ProgressBar
                android:id="@+id/client_list_progress"
                style="@android:style/Widget.Holo.Light.ProgressBar.Large.Inverse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="visible" />


        </FrameLayout>


    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header">

        <include
            layout="@layout/operator_details_and_logout"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </com.google.android.material.navigation.NavigationView>
</androidx.drawerlayout.widget.DrawerLayout>